--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "playful": "bin/app.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./bin/app.js"
   },
   "repository": {
     "type": "git",
